# webrtc-distributor

./: .gitignore  Cargo.toml  README.md  config.js  config.json  exampleconfig.json  extstream  intstream  lel.sdp  min.sdp  test.sdp  testbuffering.bat  udp.js
core/: Cargo.toml
core/src/: app_controller.rs  buffered_track.rs  client.rs  main.rs  net_util.rs  server.rs  stats.rs  stream_manager.rs  track_def.rs
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: App.svelte  Navbar.svelte  Stats.svelte  app.css  main.ts
frontend/src/lib/: App.svelte  Navbar.svelte  Stats.svelte  Stream.svelte  StreamContainer.svelte
frontend/src/lib/modals/: Settings.svelte  Streams.svelte
frontend/src/stores/: modals.ts  net.ts  rtc.ts  settings.ts  stats.ts  streams.ts
public/: index.html
src/: api.rs  app_controller.rs  buffered_track.rs  client.rs  controller.rs  ffmpeg.rs  main.rs  net_util.rs  rtp_stream.rs  rtp_track.rs  sdp.rs  server.rs  stream_manager.rs  stream_peer.rs  track_feeder.rs  webrtc_sink.rs
