[package]
name = "webrtc-distributorv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
webrtc = "0.6.0"
tokio = { version = "1.15", features = ["full"] }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0"
rouille = "3.6.1"
structopt="0.3.26"
socket2 = "0.4.7"
rtp-rs = "0.6.0"
tempfile = "3"
tinytemplate = "1.2.1"
regex = "1"
lazy_static = "1.4.0"
portpicker = "0.1.1"
notify = "5.0.0"
bytes = "1.3.0"
sysinfo = "0.27.0"